--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Weather App Assignment</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Weather Finder</h1>
+        <div class="input-container">
+            <input type="text" id="city-input" placeholder="Enter city name" />
+            <button id="search-btn">Search</button>
+        </div>
 
+        <div id="weather-details" class="weather-details">
+
+        </div>
+
+        <div id="loading" class="loading">
+            <p>Loading</p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
